--- a/src/scss/layouts/slider.scss
+++ b/src/scss/layouts/slider.scss
@@ -4,17 +4,26 @@
             position: relative;
             display: block;
             overflow: hidden;
-            .arrow__prev {
+            .arrow {
                 position: absolute;
                 top: 50%;
-                left: 0;
                 z-index: 10;
+                padding: 15px 10px;
+                background: #000;
+                opacity: 0.7;
+                border: none;
+                margin-top: -20px;
+                display: none;
+                i {
+                    color: #fff;
+                    font-size: 20px;
+                }
+            }
+            .arrow__prev {
+                left: 0;
             }
             .arrow__next {
-                position: absolute;
-                top: 50%;
                 right: 0;
-                z-index: 10;
             }
             .slider__list {
                 display: flex;
@@ -32,9 +41,22 @@
                                 width: 90%;
                                 margin: 0 -1%;
                                 flex: 1 1;
-                                .slider__image {
-                                    width: 31.3333333%;
+                                .image__content {
+                                    width: 33.3333333%;
+                                    box-sizing: border-box;
                                     padding: 1%;
+                                    overflow: hidden;
+                                    cursor: pointer;
+                                    .slider__image {
+                                        width: 100%;
+                                        height: 100%;
+                                    }
+                                }
+                                .image__content:hover {
+                                    .slider__image {
+                                        transform: scale(1.05);
+                                        transition: all 0.3s;
+                                    }
                                 }
                             }
                             .left {
@@ -62,6 +84,12 @@
                     opacity: 1;
                     transition-duration: 1s;
                 }
+            }
+        }
+        .slider__content:hover {
+            .arrow {
+                display: block;
+                cursor: pointer;
             }
         }
     }
