--- a/src/scss/layouts/footer.scss
+++ b/src/scss/layouts/footer.scss
@@ -29,7 +29,7 @@
                             color: #f8f8f8;
                         }
                         a:hover {
-                            color: #ff4c3b;
+                            color: #d966ff;
                         }
                     }
                 }
