--- a/src/scss/layouts/movies.scss
+++ b/src/scss/layouts/movies.scss
@@ -1,7 +1,14 @@
 .movies {
     position: relative;
-    margin-top: 40px;
+    margin-top: 50px;
     width: 100%;
+    .title {
+        text-align: center;
+        padding: 30px 0;
+        text-transform: uppercase;
+        color: #f8f8f8;
+        font-size: 30px;
+    }
     .movies__list {
         display: flex;
         flex-wrap: wrap;
